# audio2ay4

./: .gitignore  README.md  pyproject.toml
chat-history/: README.md  audio2ay4-memory.md
corpus/: README.md
corpus/ym/Maze/: chip blip journey.ym
design/: README.md  plan-a-reinforcement-learning.md  plan-b-diffusion.md
results/audio2ay3/demucs-ft_dual/: 8-BitNostalgia.ay2.ym  8-BitNostalgia.ym  Dungeon_Ore.ay2.ym  Dungeon_Ore.ym  Goblins_Lair.ay2.ym  Goblins_Lair.ym  Pixel_Hearthbeat.ay2.ym  Pixel_Hearthbeat.ym  The_Dragons_Lair.ay2.ym  The_Dragons_Lair.ym  The_Forgotten_Sanctum.ay2.ym  The_Forgotten_Sanctum.ym  The_Last_Pixel.ay2.ym  The_Last_Pixel.ym
results/compare/: 8-BitNostalgia_dummy.ym  Dungeon_Ore_dummy.ym  Goblins_Lair_dummy.ym  Pixel_Hearthbeat_dummy.ym  The_Dragons_Lair_dummy.ym  The_Forgotten_Sanctum_dummy.ym  The_Last_Pixel_dummy.ym  The_Last_Pixel_v1_reward.ym  The_Last_Pixel_v3_aug.ym  The_Last_Pixel_v7_warmstart.ym  _audio2ay3_dual_scores.txt  _audio2ay3_scores.txt  _eval_all.txt  _eval_v8_chroma.txt
results/listen/: PixelQuest_v7.ym  PixelQuest_v9.ym
scripts/: download_modland_ym.py  modland_ym.txt  score_candidates.py  score_dual.py
src/audio2ay4/: __init__.py  cli.py  config.py
src/audio2ay4/chip/: __init__.py  (+2 more)
test_instructions/: 01_second-machine-warmstart.md  10_report.md
tests/: test_augment.py  test_compile_legality.py  test_data_pairing.py  test_diff_emulator.py  test_eval_metrics.py  test_features_cqt.py  test_pipeline_dummy.py  test_policy_rl.py  test_real_train.py  test_reward.py  test_splits.py  test_train_warmstart.py
(+38 files in other folders)
